expanded embedding notebook examples

--- a/notebooks/testing_embeddings.ipynb
+++ b/notebooks/testing_embeddings.ipynb
@@ -292,6 +292,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query                Mejor coincidencia\n",
+      "--------------------------------------------------\n",
+      "historia feliz       Hombre de Maine gana $1M con un billete de lotería de $25\n",
+      "cambio climático     La última plataforma de hielo intacta de Canadá se derrumba repentinamente, formando un iceberg del tamaño de Manhattan\n",
+      "salud pública        Hombre de Maine gana $1M con un billete de lotería de $25\n",
+      "enfermedades         EEUU supera los 5 millones de casos confirmados de virus\n",
+      "guerra               Pekín moviliza embarcaciones de invasión a lo largo de la costa mientras aumentan las tensiones con Taiwán\n",
+      "vida salvaje         El Servicio de Parques Nacionales advierte contra sacrificar amigos más lentos en un ataque de oso\n",
+      "Asia                 Pekín moviliza embarcaciones de invasión a lo largo de la costa mientras aumentan las tensiones con Taiwán\n",
+      "asia                 Pekín moviliza embarcaciones de invasión a lo largo de la costa mientras aumentan las tensiones con Taiwán\n",
+      "suerte               Hombre de Maine gana $1M con un billete de lotería de $25\n",
+      "estafa               Hombre de Maine gana $1M con un billete de lotería de $25\n",
+      "timo                 Hombre de Maine gana $1M con un billete de lotería de $25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Spanish embeddings with spanish data\n",
+    "\n",
+    "es2_beddings = Embeddings(path=\"sentence-transformers/all-MiniLM-L6-v2\")\n",
+    "\n",
+    "# Create an index for the list of text\n",
+    "es2_beddings.index(data_es)\n",
+    "\n",
+    "print(\"%-20s %s\" % (\"Query\", \"Mejor coincidencia\"))\n",
+    "print(\"-\" * 50)\n",
+    "\n",
+    "# Run an embeddings search for each query\n",
+    "for query in (\"historia feliz\", \"cambio climático\", \"salud pública\", \"enfermedades\", \"guerra\", \"vida salvaje\", \"Asia\", \"asia\", \"suerte\", \"estafa\", \"timo\"):\n",
+    "  # Extract uid of first result\n",
+    "  # search result format: (uid, score)\n",
+    "  uid = es2_beddings.search(query, 1)[0][0]\n",
+    "\n",
+    "  # Print text\n",
+    "  print(\"%-20s %s\" % (query, data_es[uid]))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -430,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -451,6 +497,165 @@
     "\n",
     "print(es_beddings.search(\"historia feliz\"))\n",
     "print(es_beddings.search(\"lotería\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Topic modeling\n",
+    "\n",
+    "Topic modeling is enabled via semantic graphs. Semantic graphs, also known as knowledge graphs or semantic networks, build a graph network with semantic relationships connecting the nodes. In txtai, they can take advantage of the relationships inherently learned within an embeddings index."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'topic': 'virus_tops_cases_million',\n",
+       "  'category': 'health',\n",
+       "  'text': 'US tops 5 million confirmed virus cases'},\n",
+       " {'topic': \"last_forming_canada's_manhattan\",\n",
+       "  'category': 'climate',\n",
+       "  'text': \"Canada's last fully intact ice shelf has suddenly collapsed, forming a Manhattan-sized iceberg\"},\n",
+       " {'topic': 'beijing_coast_craft_invasion',\n",
+       "  'category': 'world politics',\n",
+       "  'text': 'Beijing mobilises invasion craft along coast as Taiwan tensions escalate'}]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create embeddings with a graph index\n",
+    "en_beddings = Embeddings(\n",
+    "  path=\"sentence-transformers/nli-mpnet-base-v2\",\n",
+    "  content=True,\n",
+    "  functions=[\n",
+    "    {\"name\": \"graph\", \"function\": \"graph.attribute\"},\n",
+    "  ],\n",
+    "  expressions=[\n",
+    "    {\"name\": \"category\", \"expression\": \"graph(indexid, 'category')\"},\n",
+    "    {\"name\": \"topic\", \"expression\": \"graph(indexid, 'topic')\"},\n",
+    "  ],\n",
+    "  graph={\n",
+    "    \"topics\": {\n",
+    "      \"categories\": [\"health\", \"climate\", \"finance\", \"world politics\"]\n",
+    "    }\n",
+    "  }\n",
+    ")\n",
+    "\n",
+    "en_beddings.index(data_en)\n",
+    "# It's a query, ex: \"SELECT x,y,z FROM txtai\"\n",
+    "en_beddings.search(\"select topic, category, text from txtai\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'topic': 'de_virus_eeuu_confirmados',\n",
+       "  'category': 'enfermedades',\n",
+       "  'text': 'EEUU supera los 5 millones de casos confirmados de virus'},\n",
+       " {'topic': 'intacta_de_la_repentinamente',\n",
+       "  'category': 'enfermedades',\n",
+       "  'text': 'La última plataforma de hielo intacta de Canadá se derrumba repentinamente, formando un iceberg del tamaño de Manhattan'},\n",
+       " {'topic': 'las_de_la_tensiones',\n",
+       "  'category': 'enfermedades',\n",
+       "  'text': 'Pekín moviliza embarcaciones de invasión a lo largo de la costa mientras aumentan las tensiones con Taiwán'}]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create embeddings with a graph index\n",
+    "es_beddings = Embeddings(\n",
+    "  path=\"sentence-transformers/paraphrase-multilingual-mpnet-base-v2\",\n",
+    "  content=True,\n",
+    "  functions=[\n",
+    "    {\"name\": \"graph\", \"function\": \"graph.attribute\"},\n",
+    "  ],\n",
+    "  expressions=[\n",
+    "    {\"name\": \"category\", \"expression\": \"graph(indexid, 'category')\"},\n",
+    "    {\"name\": \"topic\", \"expression\": \"graph(indexid, 'topic')\"},\n",
+    "  ],\n",
+    "  graph={\n",
+    "    \"topics\": {\n",
+    "      \"categories\": [\"cambio climático\", \"finanzas\", \"guerra\", \"enfermedades\"]\n",
+    "    }\n",
+    "  }\n",
+    ")\n",
+    "\n",
+    "# historia feliz\", \"cambio climático\", \"salud pública\", \"enfermedades\", \"guerra\", \n",
+    "# \"vida salvaje\", \"Asia\", \"asia\", \"suerte\", \"estafa\", \"timo\"): \n",
+    "\n",
+    "es_beddings.index(data_es)\n",
+    "# It's a query, ex: \"SELECT x,y,z FROM txtai\"\n",
+    "es_beddings.search(\"select topic, category, text from txtai\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'topic': 'de_virus_eeuu_confirmados',\n",
+       "  'category': 'enfermedades',\n",
+       "  'text': 'EEUU supera los 5 millones de casos confirmados de virus'},\n",
+       " {'topic': 'intacta_de_la_repentinamente',\n",
+       "  'category': 'guerra',\n",
+       "  'text': 'La última plataforma de hielo intacta de Canadá se derrumba repentinamente, formando un iceberg del tamaño de Manhattan'},\n",
+       " {'topic': 'las_de_la_tensiones',\n",
+       "  'category': 'guerra',\n",
+       "  'text': 'Pekín moviliza embarcaciones de invasión a lo largo de la costa mientras aumentan las tensiones con Taiwán'}]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create embeddings with a graph index\n",
+    "es_beddings = Embeddings(\n",
+    "  path=\"sentence-transformers/all-MiniLM-L6-v2\",\n",
+    "  content=True,\n",
+    "  functions=[\n",
+    "    {\"name\": \"graph\", \"function\": \"graph.attribute\"},\n",
+    "  ],\n",
+    "  expressions=[\n",
+    "    {\"name\": \"category\", \"expression\": \"graph(indexid, 'category')\"},\n",
+    "    {\"name\": \"topic\", \"expression\": \"graph(indexid, 'topic')\"},\n",
+    "  ],\n",
+    "  graph={\n",
+    "    \"topics\": {\n",
+    "      \"categories\": [\"cambio climático\", \"finanzas\", \"guerra\", \"enfermedades\"]\n",
+    "    }\n",
+    "  }\n",
+    ")\n",
+    "\n",
+    "# historia feliz\", \"cambio climático\", \"salud pública\", \"enfermedades\", \"guerra\", \n",
+    "# \"vida salvaje\", \"Asia\", \"asia\", \"suerte\", \"estafa\", \"timo\"): \n",
+    "\n",
+    "es_beddings.index(data_es)\n",
+    "# It's a query, ex: \"SELECT x,y,z FROM txtai\"\n",
+    "es_beddings.search(\"select topic, category, text from txtai\")"
    ]
   }
  ],
